fix UI spacing

--- a/static/style.css
+++ b/static/style.css
@@ -51,9 +51,9 @@ body {
 
 .container h2 {
     text-align: left;
-    margin-bottom: 12px;
+    margin-bottom: 11px;
     margin-top: 0;
-    padding-left: 55px;
+    padding-left: 35px;
 }
 
 
